--- a/CSS.css
+++ b/CSS.css
@@ -210,7 +210,7 @@ i {
 
 
 #Landing {
-    background: no-repeat center right fixed url("https://raw.githubusercontent.com/samuelfooks/samuelfooks.github.io/main/assets/background.jpg");
+    background: no-repeat center right fixed url("raw.githubusercontent.com/samuelfooks/samuelfooks.github.io/main/assets/background.jpg");
     position: relative;
     height: 100vh;
     margin: 0;
