--- a/CSS.css
+++ b/CSS.css
@@ -10,13 +10,16 @@ h2 {
 
 h4 {
     color: #4c5b61;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 hr {
     border-color: #aeaeae;
 }
 
+h5 {
+    font-size: 20px;
+}
 i {
     padding: 0px 1px 0px 1px;
 }
@@ -262,13 +265,18 @@ i {
     padding: 50px 0px 50px 0px;
     width: inherit;
     margin: 0;
+    font-size:20px;
 }
 
 .table { border: none; }
-.table tbody > tr > th { border: none; }
+.table > tbody > tr > th { border: none;
+                        font-size:24px; }
+.table > tbody > th > tr { font-size:20px;
+}
 table > tbody > tr > th > h5 > ul > li {
     margin-top: 5px;
     margin-bottom: 5px;
+    font-size:20px;
 }
 
 .exp-dates {
